--- a/report-template.tex
+++ b/report-template.tex
@@ -46,8 +46,8 @@
 	autogobble=true
 }             
                                
-\title{Linear Regression \\ \Large Epoch IIT Hyderabad}
-\author{Ankit Saha \\ \normalsize AI21BTECH11004 \\ \vspace*{20pt} \normalsize  15 Jul 2022}
+\title{<topic> \\ \Large Epoch IIT Hyderabad}
+\author{Ankit Saha \\ \normalsize AI21BTECH11004 \\ \vspace*{20pt} \normalsize <date>}
 
 
 \begin{document}
